# flask-babelplus

./: .coveragerc  .gitignore  .travis.yml  CHANGES  CONTRIBUTORS  LICENSE  Makefile  README  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
flask_babelex/: __init__.py
flask_babelplus/: __init__.py  babel.py  constants.py  core.py  domain.py  speaklater.py  utils.py
tests/: tests.py
tests/translations/: messages.pot
tests/translations/de/LC_MESSAGES/: messages.mo  messages.po
